--- a/enterprise/cw_rn_compare.ipynb
+++ b/enterprise/cw_rn_compare.ipynb
@@ -857,11 +857,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "828cd9bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world!')"
+   ]
   },
   {
    "cell_type": "code",
